# vibe-gcp-github-template

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  alembic.ini  pyproject.toml
.github/workflows/: auto-merge.yml  ci-pr.yml  deploy.yml
alembic/: env.py
alembic/versions/: 20260223_0001_create_items_table.py
app/: config.py  main.py
app/api/: routes.py
app/db/: models.py  session.py
app/schemas/: item.py
docs/: 00-start-here.md  gcp-project-bootstrap.md  gcp-setup.md  github-actions-wif.md  progress-completed.md
plans/: gcp-fastapi-workshop-plan.md
project/: architecture.md  decisions.md  goal.md  progress.md  session-handoff.md  tasks.md
tests/: test_health.py
