[project]
name = "fastapi-cloud-run-lab"
version = "0.1.0"
description = "FastAPI backend lab for Cloud Run and Cloud SQL"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "sqlalchemy>=2.0.32",
  "asyncpg>=0.29.0",
  "alembic>=1.13.2",
  "pydantic-settings>=2.4.0",
  "psycopg[binary]>=3.2.1",
]

[dependency-groups]
dev = [
  "pytest>=8.3.0",
  "httpx>=0.27.0",
]

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
